--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -33,6 +33,8 @@
         .picture {padding-left: 70px; max-width: 730px}
         .pictureRT {max-width: 677px}
         .time {float: right; font-size: 13px; color: #8899a6; text-decoration: none;}
+        .rtOrigin {font-size: 12px;}
+        .rtOrigin strong {color: #0099ff;}
     </style>
 </head>
 <body>
