--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -19,7 +19,6 @@ html, body {
     border: #8899a6 solid 1px;
     padding: 5px 10px 5px 10px;
     font-size: 14px;
-    line-height: 18px;
     border-radius: 4px;
     line-height: 1.3;}
 .avatar {float: left; padding: 2px 10px 10px 10px; border-radius: 5px; width: 48px; height: 48px;}
@@ -34,3 +33,6 @@ a:hover.name {color: #FF0000}
 .pictureRT {max-width: 650px}
 .time {float: right; font-size: 13px; color: #8899a6; text-decoration: none;}
 .rtOrigin {font-size: 12px; color: #0099ff;}
+.edit a { color: #8899a6; font-size: 13px;}
+.edit .rt {margin-left: 100px;}
+.edit .like {margin-left: 23px;}
